<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:id="@+id/textViewItemsCard" />

    <TextView
        android:layout_width="0dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:gravity="center"
        android:id="@+id/textViewPriceCard"/>

    <TextView
        android:layout_width="0dp"
        android:padding="10dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/textViewAmountCard"/>

    <TextView
        android:layout_width="0dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:gravity="center"
        android:id="@+id/textViewTotalCard"/>

</LinearLayout>