<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".BillActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lisView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:id="@+id/textViewItems"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:gravity="center"
            android:id="@+id/textViewWeight"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/textViewTotal"/>

    </LinearLayout>

</LinearLayout>